--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,51 +1,105 @@
 .nav {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
+	position: relative;
 	width: 100%;
-	height: 8rem;
-	// padding: 0 3rem;
-	background-color: #222;
-	position: fixed;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
+
+	&__container {
+		position: fixed;
+		top: 0;
+		left: 50%;
+		width: 100%;
+		height: 8rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		transform: translateX(-50%);
+		z-index: 10;
+	}
+
+	&__background {
+		background-color: rgba(0, 0, 0, 0.9);
+		transition: 0.5s;
+	}
 
 	&__list {
 		display: flex;
 		text-transform: uppercase;
-		font-size: 1.6rem;
+		font-size: 1.4rem;
 	}
 
 	&__logo {
+		padding: 1rem 3rem;
+		font-size: 2.4rem;
 		font-weight: 600;
 		letter-spacing: 0.2rem;
-		font-size: 2.4rem;
-        padding: 1rem 3rem;
 
-        i {
-            padding-left: 1rem;
-        }
+		i {
+			padding-left: 1rem;
+		}
 	}
 
-    &__item {
-        padding: 3rem;
-        transition: background-color .3s;
+	&__item {
+		padding: 3rem;
+		transition: background-color 0.3s;
 
-        i{
-            padding-right: .5rem;
-        }
-    }
+		i {
+			padding-right: 1rem;
+		}
+	}
 
-    &__item:hover{
-        background-color: #52796f;
-    }
+	&__item:hover {
+		background-color: #52796f;
+	}
 
-    &__burger {
-        color: #fff;
-        font-size: 2rem;
-        padding: 1rem;
-        cursor: pointer;
-    }
+	&__burger {
+		color: #fff;
+		font-size: 3rem;
+		display: none;
+		cursor: pointer;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.nav {
+		&__container {
+			height: 12rem;
+		}
+
+		&__logo {
+			font-size: 3rem;
+		}
+
+		&__list {
+			position: absolute;
+			top: 0;
+			left: -100%;
+			width: 100%;
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			transition: 0.5s;
+			z-index: -2;
+			background-color: rgba(0, 0, 0, 0.9);
+
+			li {
+				padding: 2rem;
+				font-size: 2.5rem;
+				margin: 1rem;
+			}
+		}
+
+		&__list.active {
+			left: 0;
+		}
+
+		&__item i {
+			padding-right: 1.5rem;
+		}
+
+		&__burger {
+			display: block;
+			padding: 1rem 3rem;
+		}
+	}
 }
