--- a/src/base.scss
+++ b/src/base.scss
@@ -11,16 +11,14 @@ html {
 
 body {
 	font-family: 'Poppins', sans-serif;
-    background-color: #2f3e46;
-    height: 200vh;
-    
+	background-color: #2f3e46;
+	height: 300vh;
 }
 
 .container {
-    max-width: 1400px;
-    margin-right: auto;
-    margin-left: auto;
-   
+	max-width: 1400px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 ul {
@@ -29,11 +27,41 @@ ul {
 
 a {
 	text-decoration: none;
-    color: #fff;
+	color: #fff;
 }
 
-button {
+.btn {
+	font-size: 2rem;
+	padding: 1.5rem 3rem;
+	border-radius: 0.5rem;
+	margin: 2rem;
+	background-color: #84a98c;
 	cursor: pointer;
 	border: none;
 	outline: none;
+	position: relative;
+	overflow: hidden;
+}
+.btn::before {
+	content: '';
+	position: absolute;
+	top: -20%;
+	left: -30%;
+	height: 120%;
+	width: 20%;
+	transition: 0.5s;
+	transform: rotate(20deg);
+	background-image: linear-gradient(-90deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
+}
+.btn:hover::before {
+	left: 110%;
+}
+
+.section__title {
+	font-size: 5rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	text-align: center;
+	color: #fff;
+	border-bottom: 3px solid #84a98c;
 }
