--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,105 +1,115 @@
-.nav {
-	position: relative;
-	width: 100%;
-
-	&__container {
-		position: fixed;
-		top: 0;
-		left: 50%;
+.header {
+	&__image {
+		position: relative;
 		width: 100%;
-		height: 8rem;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		transform: translateX(-50%);
-		z-index: 10;
-	}
-
-	&__background {
-		background-color: rgba(0, 0, 0, 0.9);
-		transition: 0.5s;
-	}
-
-	&__list {
-		display: flex;
-		text-transform: uppercase;
-		font-size: 1.4rem;
-	}
-
-	&__logo {
-		padding: 1rem 3rem;
-		font-size: 2.4rem;
-		font-weight: 600;
-		letter-spacing: 0.2rem;
-
-		i {
-			padding-left: 1rem;
+		height: 100vh;
+		
+		.header__shadow--img {
+			width: 100%;
+			height: 100vh;
+			background-size: cover;
+			background-position: center;
+			animation: bounce 2s both;
 		}
 	}
 
-	&__item {
-		padding: 3rem;
-		transition: background-color 0.3s;
-
-		i {
-			padding-right: 1rem;
-		}
+	&__image::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
 	}
 
-	&__item:hover {
-		background-color: #52796f;
-	}
-
-	&__burger {
+	&__content {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		text-align: center;
+		transform: translate(-50%, -50%);
 		color: #fff;
-		font-size: 3rem;
-		display: none;
-		cursor: pointer;
+		text-transform: uppercase;
+		animation: appear 2s 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+		anim h1 {
+			font-size: 5rem;
+			padding: 1rem 1.5rem;
+		}
+
+		p {
+			font-size: 2rem;
+			font-weight: 200;
+			width: 100%;
+		}
+
+		.btn--transparent {
+			background-color: transparent;
+			border: 1px solid #fff;
+		}
 	}
 }
 
 @media screen and (max-width: 768px) {
-	.nav {
-		&__container {
-			height: 12rem;
-		}
-
-		&__logo {
-			font-size: 3rem;
-		}
-
-		&__list {
-			position: absolute;
-			top: 0;
-			left: -100%;
-			width: 100%;
-			height: 100vh;
+	.header {
+		&__content {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			transition: 0.5s;
-			z-index: -2;
-			background-color: rgba(0, 0, 0, 0.9);
-
-			li {
-				padding: 2rem;
-				font-size: 2.5rem;
-				margin: 1rem;
+			h1 {
+				font-size: 4rem;
+				margin-bottom: 2rem;
 			}
 		}
+	}
+}
 
-		&__list.active {
-			left: 0;
-		}
+@keyframes appear {
+	0% {
+		letter-spacing: 0.3rem;
+		filter: blur(1rem);
+		opacity: 0;
+	}
+	100% {
+		filter: blur(0);
+		opacity: 1;
+	}
+}
 
-		&__item i {
-			padding-right: 1.5rem;
-		}
-
-		&__burger {
-			display: block;
-			padding: 1rem 3rem;
-		}
+@keyframes bounce{
+	0% {
+		transform: translateY(-50rem);
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+	38% {
+		transform: translateY(0);
+		animation-timing-function: ease-out;
+		opacity: 1;
+	}
+	55% {
+		transform: translateY(-6.5rem);
+		animation-timing-function: ease-in;
+	}
+	72% {
+		transform: translateY(0);
+		animation-timing-function: ease-out;
+	}
+	81% {
+		transform: translateY(-2.5rem);
+		animation-timing-function: ease-in;
+	}
+	90% {
+		transform: translateY(0);
+		animation-timing-function: ease-out;
+	}
+	95% {
+		transform: translateY(-1rem);
+		animation-timing-function: ease-in;
+	}
+	100% {
+		transform: translateY(0);
+		animation-timing-function: ease-out;
 	}
 }
