--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -32,7 +32,7 @@
 		color: #fff;
 		text-transform: uppercase;
 		animation: appear 2s 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
-		anim h1 {
+		h1 {
 			font-size: 5rem;
 			padding: 1rem 1.5rem;
 		}
