--- a/src/components/AboutMe/aboutMe.scss
+++ b/src/components/AboutMe/aboutMe.scss
@@ -14,13 +14,16 @@
 		color: #fff;
 
 		&--name {
+			position: relative;
 			font-size: 4rem;
 			padding: 2rem;
-			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 5s reverse both;
+			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 2s reverse both;
 
 			i {
 				padding-left: 3rem;
 				transition: transform 0.5s;
+				transform-origin: 80% 50%;
+				animation: hand-shaking 2s linear 0.5s infinite;
 			}
 		}
 
@@ -34,7 +37,7 @@
 			font-size: 2.8rem;
 			padding: 1rem 0;
 			position: relative;
-			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 5.5s reverse both;
+			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 2.5s reverse both;
 		}
 
 		&--title::before,
@@ -59,27 +62,48 @@
 			font-size: 1.4rem;
 			font-weight: 200;
 			padding: 2rem;
-			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 6s reverse both;
+			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 3s reverse both;
+		}
 
-			.technologies--list {
-				padding-top: 2rem;
-				text-align: center;
+		&--technologies {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			font-size: 1.6rem;
+			text-transform: uppercase;
+			font-weight: bold;
+			margin: 2rem 0;
+			
 
-				li {
-					width: 100%;
-					font-weight: bold;
+			.technologies--container {
+				border: 2px solid #fff;
+				border-radius: 1rem;
+				padding: 1rem;
+				margin: 2rem;
+				animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 3.5s reverse both;
+			}
+
+			p {
+				padding: 1rem;
+				display: flex;
+				align-items: center;
+				animation: tracking-out 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) 3.5s reverse both;
+
+				.icon {
+					padding-right: 0.5rem;
+					font-size: 2rem;
 				}
 			}
 		}
 
 		&--btn {
-			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 6.5s reverse both;
+			animation: tracking-out 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 4s reverse both;
 		}
 	}
 
 	&__photo {
 		width: 30%;
-		animation: fade-out 1s linear 4s reverse both;
+		animation: fade-out 3s linear 1s reverse both;
 
 		&--avatar {
 			border-radius: 50%;
@@ -113,6 +137,12 @@
 			&--title::after {
 				right: -25%;
 				width: 5rem;
+			}
+
+			&--technologies {
+				.technologies--container {
+					margin: 0.7rem;
+				}
 			}
 		}
 
@@ -150,5 +180,17 @@
 	}
 	100% {
 		opacity: 0;
+	}
+}
+
+@keyframes hand-shaking {
+	0% {
+		transform: rotate(0deg);
+	}
+	50% {
+		transform: rotate(90deg);
+	}
+	100% {
+		transform: rotate(0deg);
 	}
 }
