--- a/src/components/AboutMe/aboutMe.scss
+++ b/src/components/AboutMe/aboutMe.scss
@@ -109,7 +109,7 @@
 	}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
 	.about {
 		display: flex;
 		flex-direction: column;
@@ -151,7 +151,7 @@
 			justify-content: center;
 
 			img {
-				width: 50%;
+				width: 28rem;
 				height: auto;
 			}
 		}
