--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,8 +1,10 @@
 .contact {
 	position: relative;
-	width: 100%;
+	max-width: 100rem;
 	padding-top: 20rem;
 	padding-bottom: 10rem;
+	margin-right: auto;
+	margin-left: auto;
 
 	&__box {
 		width: 100%;
@@ -10,10 +12,14 @@
 		justify-content: center;
 
 		&--social {
-			width: 30%;
+			width: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
 
 			.social__card {
-				width: 100%;
+				width: 60%;
 				margin: 2rem 0;
 				color: #fff;
 				border: 2px solid #fff;
@@ -47,11 +53,11 @@
 		}
 
 		.form {
-			width: 60%;
+			width: 50%;
 			text-align: center;
-            
+
 			p {
-                color: #fff;
+				color: #fff;
 				font-size: 2.8rem;
 			}
 
@@ -67,11 +73,11 @@
 					width: 70%;
 					padding: 2rem 1rem;
 					border-radius: 1rem;
-                    border: 2px solid #fff;
+					border: 2px solid #fff;
 					background-color: transparent;
 					margin: 1rem 0;
 					font-weight: 600;
-                    color: #fff;
+					color: #fff;
 
 					&::placeholder {
 						color: #fff;
@@ -79,11 +85,11 @@
 					}
 				}
 
-                label {
-                    color: #fff;
-                    font-size: 1.4rem;
-                    margin-top: 2rem;
-                }
+				label {
+					color: #fff;
+					font-size: 1.4rem;
+					margin-top: 2rem;
+				}
 
 				textarea {
 					height: 15rem;
@@ -93,22 +99,43 @@
 		}
 	}
 }
+@media screen and (max-width:400px) {
+	.contact__box {
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
 
-@media screen and (max-width:768px) {
-    .contact__box {
-        flex-direction: column;
-        align-items: center;
+		&--social {
+			width: 100%;
 
-        &--social {
-            width: 70%;
+			.social__card {
+				margin-bottom: 3rem;
+				width: 80%;
+			}
+		}
+		.form {
+			width: 100%;
+		}
+	}
 
-            .social__card {
-                margin-bottom: 3rem;
-            }
-        }
-.form {
-    width: 100%;
 }
 
-    }
+@media screen and ((min-width: 401px) and (max-width:992px)) {
+	.contact__box {
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+
+		&--social {
+			width: 70%;
+
+			.social__card {
+				margin-bottom: 3rem;
+				width: 30rem;
+			}
+		}
+		.form {
+			width: 100%;
+		}
+	}
 }
