--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,12 +3,13 @@
 		position: relative;
 		width: 100%;
 		height: 100vh;
-		
+		overflow: hidden;
+
 		.header__shadow--img {
 			width: 100%;
 			height: 100vh;
 			background-size: cover;
-			background-position: center;
+			background-position: bottom;
 			animation: bounce 2s both;
 		}
 	}
@@ -53,13 +54,11 @@
 @media screen and (max-width: 768px) {
 	.header {
 		&__content {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
+			margin-top: 5rem;
+
 			h1 {
 				font-size: 4rem;
-				margin-bottom: 2rem;
+				margin-top: 2rem;
 			}
 		}
 	}
@@ -77,7 +76,7 @@
 	}
 }
 
-@keyframes bounce{
+@keyframes bounce {
 	0% {
 		transform: translateY(-50rem);
 		animation-timing-function: ease-in;
