--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -65,6 +65,7 @@
 	.projects {
 		&__box {
 			flex-direction: column;
+			align-items: center;
 			width: 100%;
 
 			.projects__card {
@@ -72,4 +73,19 @@
 			}
 		}
 	}
+}
+
+@media screen and (min-width:769px) and (max-width:992px){
+	.projects {
+		&__box {
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+
+			.projects__card {
+				width: 70%;
+			}
+		}
+	}
+
 }
