--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -26,10 +26,12 @@
 			border-radius: 0.5rem;
 			color: #000;
 			background-color: #cad2c5;
+			overflow: hidden;
 
 			img {
 				width: 100%;
 				height: 50%;
+				transition: transform 0.3s;
 			}
 
 			&--heading {
@@ -58,6 +60,18 @@
 				}
 			}
 		}
+
+		.projects__card:hover {
+
+			img{
+				transform: scale(1.1);
+			
+			}
+			background-color: rgba(0,0,0,.4);
+			z-index: 10;
+			
+		}
+
 	}
 }
 
@@ -75,7 +89,7 @@
 	}
 }
 
-@media screen and (min-width:769px) and (max-width:992px){
+@media screen and (min-width: 769px) and (max-width: 992px) {
 	.projects {
 		&__box {
 			flex-direction: column;
@@ -87,5 +101,4 @@
 			}
 		}
 	}
-
 }
