--- a/src/base.scss
+++ b/src/base.scss
@@ -16,8 +16,7 @@ body {
 
 .container {
 	max-width: 1400px;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 0 auto;
 }
 
 ul {
@@ -68,7 +67,7 @@ a {
 	top: 5rem;
 	left: 50%;
 	transform: translateX(-50%);
-	font-size: 5rem;
+	font-size: 3.5rem;
 	text-transform: uppercase;
 	font-weight: 200;
 	text-align: center;
