--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,26 +1,28 @@
 .header {
-	&__image {
+	height: 100vh;
+	&__background {
 		position: relative;
 		width: 100%;
 		height: 100vh;
 		overflow: hidden;
-
-		.header__shadow--img {
-			width: 100%;
-			height: 100vh;
-			background-size: cover;
-			animation: bounce 2s both;
-		}
 	}
 
-	&__image::after {
+	&__image {
+		height: 100%;
+		width: 100%;
+		animation: bounce 2s both;
+		background-size: cover;
+		background-position: center;
+	}
+
+	&__background::after {
 		content: '';
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0, 0, 0, 0.8);
+		background-color: rgba(0, 0, 0, 0.7);
 	}
 
 	&__content {
@@ -32,33 +34,49 @@
 		color: #fff;
 		text-transform: uppercase;
 		animation: appear 2s 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
-		h1 {
-			font-size: 5rem;
-			padding: 1rem 1.5rem;
-		}
-
-		p {
-			font-size: 2rem;
-			font-weight: 200;
-			width: 100%;
-		}
+		margin-top: 5rem;
 
 		.btn--transparent {
 			background-color: transparent;
 			border: 1px solid #fff;
 		}
 	}
+
+	&__title {
+		margin-top: 2rem;
+		font-size: 3.5rem;
+	}
+
+	&__text {
+		font-size: 2rem;
+		font-weight: 200;
+	}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 576px) {
 	.header {
 		&__content {
-			margin-top: 5rem;
+			margin-top: 0;
+		}
+		&__title {
+			font-size: 3.8rem;
+			margin-bottom: 4rem;
+		}
 
-			h1 {
-				font-size: 4rem;
-				margin-top: 2rem;
-			}
+		&__text {
+			font-size: 2.2rem;
+		}
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.header {
+		&__title {
+			font-size: 4.4rem;
+		}
+
+		&__text {
+			font-size: 2.4rem;
 		}
 	}
 }
