--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,17 +1,20 @@
 .nav {
-	position: relative;
+	position: fixed;
+	height: 10rem;
 	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
 
 	&__container {
-		position: fixed;
-		top: 0;
-		left: 50%;
+		height: 10rem;
 		width: 100%;
-		height: 8rem;
+		max-width: 140rem;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		transform: translateX(-50%);
+		padding: 0 1rem;
 		z-index: 10;
 	}
 
@@ -21,14 +24,32 @@
 	}
 
 	&__list {
+		position: absolute;
+		top: 0;
+		left: -100%;
+		width: 100%;
+		height: 100vh;
 		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 		text-transform: uppercase;
-		font-size: 1.4rem;
+		background-color: rgba(0, 0, 0, 0.9);
+		transition: 0.5s;
+		z-index: -2;
+
+		&--desktop {
+			display: none;
+		}
+	}
+
+	&__list.active {
+		left: 0;
 	}
 
 	&__logo {
-		padding: 1rem 3rem;
-		font-size: 2.4rem;
+		padding: 1rem;
+		font-size: 2.6rem;
 		font-weight: 600;
 		letter-spacing: 0.2rem;
 		cursor: pointer;
@@ -39,76 +60,94 @@
 	}
 
 	&__item {
+		margin: 1rem;
+		padding: 2rem;
+		font-size: 2rem;
 		transition: transform 0.3s;
 
-		&--link {
-			padding: 3rem;
-			transition: color 0.3s;
-			cursor: pointer;
+		&:hover {
+			transform: scale(1.2);
 		}
+	}
+
+	&__link {
+		padding: 1rem;
+		transition: color 0.3s;
+		cursor: pointer;
+
+		&:hover {
+			color: #84a98c;
+		}
+
 		i {
-			padding-right: 1rem;
+			padding-right: 1.5rem;
 		}
-	}
-
-	&__item:hover {
-		transform: scale(1.2);
-	}
-
-	&__item--link:hover {
-		color: #84a98c;
 	}
 
 	&__burger {
-		color: #fff;
+		display: block;
+		padding: 1rem;
 		font-size: 3rem;
-		display: none;
+		color: #fff;
 		cursor: pointer;
 	}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 576px) {
 	.nav {
-		&__container {
-			height: 10rem;
-		}
-
 		&__logo {
-			font-size: 2.55rem;
-		}
+			padding: 2rem;
+			font-size: 2.8rem;
 
-		&__list {
-			position: absolute;
-			top: 0;
-			left: -100%;
-			width: 100%;
-			height: 100vh;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			transition: 0.5s;
-			z-index: -2;
-			background-color: rgba(0, 0, 0, 0.9);
-
-			li {
-				padding: 2rem;
-				font-size: 2.5rem;
-				margin: 1rem;
+			i {
+				padding-left: 1.5rem;
 			}
 		}
 
-		&__list.active {
-			left: 0;
+		&__item {
+			font-size: 2.2rem;
 		}
+	}
+}
 
-		&__item i {
-			padding-right: 1.5rem;
+@media screen and (min-width: 768px) {
+	.nav {
+		&__container {
+			padding: 0 2rem;
 		}
 
 		&__burger {
-			display: block;
-			padding: 1rem 3rem;
+			display: none;
+		}
+
+		&__logo {
+			font-size: 3rem;
+		}
+
+		&__list {
+			display: none;
+
+			&--desktop {
+				display: flex;
+			}
+		}
+
+		&__item {
+			padding: 1rem;
+			margin: 1rem 0;
+		}
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.nav {
+		&__logo {
+			font-size: 3.4rem;
+		}
+
+		&__item {
+			margin: 0rem 1rem;
+			font-size: 2.4rem;
 		}
 	}
 }
