--- a/src/components/AboutMe/aboutMe.scss
+++ b/src/components/AboutMe/aboutMe.scss
@@ -114,8 +114,8 @@
 			padding: 3rem 2rem;
 
 			i {
-				margin-left: 3rem;
-				margin-right: 0;
+				margin-left: 1rem;
+				margin-right: 3rem;
 			}
 		}
 
@@ -146,6 +146,11 @@
 		&__box {
 			&-name {
 				font-size: 2.8rem;
+
+				i {
+					margin-left: 3rem;
+					
+				}
 			}
 
 			&-title {
