add new project to project section. some fixes

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -20,7 +20,9 @@
 
 	&__background {
 		background-color: rgba(0, 0, 0, 0.9);
-		transition: 0.5s;
+		transition: background-color 0.5s;
+		border-bottom-left-radius: 4rem;
+		border-bottom-right-radius: 4rem;
 	}
 
 	&__list {
