--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,8 +2,8 @@
 	height: 100vh;
 	&__background {
 		position: relative;
-		width: 100%;
-		height: 100vh;
+		width: 100vw;
+		height: 100%;
 		overflow: hidden;
 	}
 
@@ -12,7 +12,7 @@
 		width: 100%;
 		animation: bounce 2s both;
 		background-size: cover;
-		background-position: center;
+		background-position: top;
 	}
 
 	&__background::after {
