--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -22,12 +22,13 @@
 	}
 
 	&__card {
-		// width: 30%;
 		display: flex;
 		flex-direction: column;
+		justify-content: space-between;
 		align-items: center;
 		width: 90%;
 		max-width: 45rem;
+		height: 70rem;
 		margin: 2rem 0;
 		border: 0.2rem solid #354f52;
 		border-radius: 0.5rem;
@@ -47,7 +48,7 @@
 		}
 
 		img {
-			height: 100%;
+			height: 35rem;
 			width: 100%;
 			transition: transform 0.5s;
 		}
@@ -120,7 +121,6 @@
 		&__card {
 			width: 45%;
 			max-width: 45rem;
-			height: 70rem;
 			margin: 2rem;
 
 			&-photo {
