--- a/src/components/AboutMe/aboutMe.scss
+++ b/src/components/AboutMe/aboutMe.scss
@@ -13,7 +13,7 @@
 
 		&--avatar {
 			width: 20rem;
-			margin-top: 14rem;
+			margin-top: 15rem;
 			margin-bottom: 3rem;
 			border-radius: 50%;
 		}
@@ -24,15 +24,14 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding-bottom: 6rem;
 		color: #fff;
-		order: 2;
 
 		&-description {
 			padding: 2rem;
 			text-align: justify;
 			font-size: 1.3rem;
 			font-weight: 200;
+			line-height: 2rem;
 		}
 
 		&-technologies {
@@ -49,17 +48,20 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				justify-content: space-evenly;
 				width: 100%;
-				max-width: 25rem;
+				max-width: 30rem;
+				height: 25rem;
 				padding: 1rem;
 				margin: 2rem;
 				border: 2px solid #fff;
 				border-radius: 1rem;
+				color: #fff;
 
 				p {
 					display: flex;
 					padding: 1rem;
-					font-size: 1.2rem;
+					font-size: 1.6rem;
 
 					.icon {
 						margin-right: 1rem;
@@ -69,29 +71,9 @@
 			}
 		}
 	}
-}
-@media screen and (min-width: 300px) {
-	.about {
-		&__box-name {
-			padding: 3rem 2rem;
 
-			i {
-				margin-left: 1rem;
-				margin-right: 3rem;
-			}
-		}
-
-		&__box-title::before,
-		&__box-title::after {
-			width: 4rem;
-		}
-
-		&__box-title::before {
-			left: -20%;
-		}
-		&__box-title::after {
-			right: -20%;
-		}
+	&__btn {
+		margin-bottom: 6rem;
 	}
 }
 
@@ -103,24 +85,18 @@
 
 		&__photo {
 			margin-top: 5rem;
+
+			&--avatar {
+				width: 25rem;
+				margin-top: 12rem;
+			}
 		}
 
 		&__box {
-			&-name {
-				font-size: 2.8rem;
-
-				i {
-					margin-left: 3rem;
-				}
-			}
-
-			&-title {
-				font-size: 2.2rem;
-			}
-
 			&-description {
 				padding: 2rem 3rem;
 				font-size: 1.6rem;
+				line-height: 2.5rem;
 			}
 
 			&-technologies {
@@ -130,7 +106,7 @@
 
 				.technologies-container {
 					p {
-						font-size: 1.4rem;
+						font-size: 1.6rem;
 					}
 				}
 			}
@@ -139,15 +115,10 @@
 }
 @media screen and (min-width: 768px) {
 	.about {
-		flex-direction: row;
-		justify-content: space-evenly;
-		margin: 0 2rem;
-
 		&__photo {
 			width: 40%;
 			max-width: 30rem;
-			margin-top: 17rem;
-			margin-bottom: 6rem;
+			margin: 0;
 		}
 
 		&__photo--avatar {
@@ -156,18 +127,29 @@
 		}
 
 		&__box {
-			width: 50%;
-		
+			flex-direction: row;
+			justify-content: space-evenly;
+			align-items: center;
+			padding: 0 2rem;
+			margin-top: 17rem;
+			margin-bottom: 4rem;
 
 			&-description {
-				margin-top: 17rem;
+				width: 60%;
 				padding: 0;
+				padding-left: 3rem;
+				line-height: 3rem;
+				font-size: 1.8rem;
 			}
 		}
 
 		.technologies-container {
 			p {
-				font-size: 1.6rem;
+				font-size: 2rem;
+
+				.icon {
+					font-size: 3rem;
+				}
 			}
 		}
 	}
@@ -176,21 +158,10 @@
 @media screen and (min-width: 1200px) {
 	.about {
 		&__box {
-			&-name {
-				font-size: 3rem;
+			&-description {
+				line-height: 4rem;
+				font-size: 1.8rem;
 			}
 		}
-	}
-}
-
-@keyframes hand-shaking {
-	0% {
-		transform: rotate(0deg);
-	}
-	50% {
-		transform: rotate(75deg);
-	}
-	100% {
-		transform: rotate(0deg);
 	}
 }
