--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -54,11 +54,7 @@
 		font-size: 2.6rem;
 		font-weight: 600;
 		letter-spacing: 0.2rem;
-		cursor: pointer;
-
-		i {
-			padding-left: 1rem;
-		}
+		color: #fff;
 	}
 
 	&__item {
@@ -100,14 +96,10 @@
 		&__logo {
 			padding: 2rem;
 			font-size: 2.8rem;
-
-			i {
-				padding-left: 1.5rem;
-			}
 		}
 
 		&__item {
-			font-size: 2.2rem;
+			font-size: 2rem;
 		}
 	}
 }
